add detail page and fix css issue on index

--- a/S06/css/style.css
+++ b/S06/css/style.css
@@ -10,7 +10,16 @@
     
 }
 
-.nom-planet {
+.card-title {
     font-family: 'Trispace', sans-serif;
     font-size:1.5em;
+}
+
+a:link, a:visited {
+    color: black;
+}
+
+#imgIcon {
+    width: 128px;
+    height: a
 }
